Fixes bug with hamburger menu
Disables 1 line of css on the about page to fix a bug where the hamburger menu appears underneath the about section, making the links unable to be clicked.

--- a/style.css
+++ b/style.css
@@ -294,7 +294,8 @@ section {
 /* ABOUT SECTION */
 
 #about {
-    position: relative;
+    /* position: relative; */
+    /* disabling this fixes a bug where the hamburger menu appears underneath the about section*/
 }
   
 .about-containers {
